added necessary files for grunt, browserify, eslint

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Theme Park</title>
 </head>
 <body>
+    <div id="parkInfo"></div>
+
+    <div id="parkAreas"></div>
+
+    <div id="parkAttractions"></div>
+
+    <div id="attractionType"></div>
     
     <script src="dist/app.js"></script>
 </body>
