finished park info part

--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
 <body>
     <div id="parkInfo"></div>
 
-    <div id="parkAreas"></div>
+    <div id="parkAreas">
+        <!-- areas will be listed here -->
+        
+        <div id="attractionType">
+            <!-- sorted by attraction types -->
+            <div id="parkAttractions">
+                <!-- attractions inside of their proper type -->
 
-    <div id="parkAttractions"></div>
+            </div>
+        </div>
 
-    <div id="attractionType"></div>
+    </div>
+
+
     
     <script src="dist/app.js"></script>
 </body>
