--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Mouse+Memoirs|Questrial" rel="stylesheet">
+
     <title>Theme Park</title>
 </head>
 <body>
     <div id="parkInfo"></div>
 
-    <div  id="parkAreas">
+    <div id="parkAreas">
         <!-- areas will be listed here -->
         
         <div id="attractionType">
