added css files, took out css from js files

--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Mouse+Memoirs|Questrial" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/areas.css">
+    <link rel="stylesheet" href="css/parkInfo.css">
     <title>Theme Park</title>
 </head>
 <body>
     <div id="parkInfo"></div>
-
     <div id="parkAreas">
         <!-- areas will be listed here -->
-        
         <div id="attractionType">
             <!-- sorted by attraction types -->
             <div id="parkAttractions">
