added css to type

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/parkInfo.css">
     <link rel="stylesheet" href="css/attractions.css">
     <link rel="stylesheet" href="css/areas.css">
+    <link rel="stylesheet" href="css/types.css">
     <title>Theme Park</title>
 </head>
 <body>
